admin/users: completed, move routes to /api/*
