# source/backend/config/swagger.json
@@ -31,7 +31,7 @@
     "application/json"
   ],
   "paths": {
-    "/admin/users": {
+    "/api/admin/users": {
       "get": {
         "tags": [
           "Admin/Users"
@@ -79,6 +79,96 @@
         }
 
       }
+    },
+    "/api/admin/users/{id}": {
+      "get": {
+        "tags": [
+          "Admin/Users"
+        ],
+        "summary": "Get a user by id",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true,
+            "description": "Indentifier of the person"
+          }
+        ],      
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }  
+      },
+      "put": {
+        "tags": [
+          "Admin/Users"
+        ],
+        "summary": "Set a user by id",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true,
+            "description": "Indentifier of the person"
+          },
+          {
+            "in": "body",
+            "name": "user",
+            "description": "User to modify",
+            "schema": {
+              "required": [
+                "name",
+                "email"
+              ],
+              "$ref": "#/definitions/User"
+            }
+          }
+
+        ],      
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }  
+      },
+      "delete": {
+        "tags": [
+          "Admin/Users"
+        ],
+        "summary": "Delete a user by id",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "required": true,
+            "description": "Indentifier of the person"
+          }
+        ],      
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }  
+      }      
     }
   },
   "definitions": {
